# geltif

./: .gitmodules  CMakeLists.txt  geltif.cpp  geltif.hpp
